# snake-gl

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  snake-gl.cpp  vcpkg.json
include/: GLstate.h  GrowthSystem.h  PositionSystem.h  Random.h  RenderSystem.h  Shader.h
shaders/: triangle.frag  triangle.h  triangle.vert
